Manage Confluent Cloud tags (#321)
* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Manage Confluent tags

* Update tags creation and deletion

* Fix tests

* Improve tests

* Improve tests

* Only display forbidden tags

* Add links to Confluent Cloud tags

---------

Co-authored-by: Loïc Greffier <loic.greffier_ext@michelin.com>